# cryptopia

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_pages.py  126e20ba0e26_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  edit_proxy.py  me.py  notebooks.py  pages.py  public_static.py  run_mount.py  social.py
backend/app/core/: auth.py  config.py  database.py
backend/app/db/: base.py
backend/app/models/: __init__.py  notebook.py  page.py  social.py  user.py
backend/app/schemas/: me.py  notebook.py
backend/app/services/: edit_sessions.py  execution.py  extended_md.py  notebooks.py  users.py
backend/data/: cryptopia.db
backend/scripts/: migrate_legacy_to_pages.py
deploy/: Caddyfile
docs/: extended-markdown.md
examples/demo-research/: research.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: AuthGate.svelte  CommentsSection.svelte  NotebookCard.svelte  ReactionsBar.svelte  VisibilityBadge.svelte
frontend/src/lib/md/: extended.ts
frontend/src/lib/render/: Block.svelte  CodeBlock.svelte  CodeCell.svelte  Markdown.svelte  Output.svelte  RenderedPage.svelte  index.ts
frontend/src/lib/stores/: auth.svelte.ts  execution.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
sdk/: README.md  pyproject.toml
sdk/cryptopia/: __init__.py  widgets.py
(+30 files in other folders)
