[project]
name = "cryptopia-backend"
version = "0.1.0"
description = "Cryptopia: a marimo-powered modern data dashboard platform with Authelia auth"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.2",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "marimo>=0.13.0",
    "pyzmq>=26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# B008: Depends(...) in defaults is FastAPI's prescribed style.
# UP007/UP045: keep `T | None` and `Optional[T]` interchangeable.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
